[project]
name = "kernel_builder"
version = "0.1.0"
description = "A python gki kernel builder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.29.4",
    "datetime>=5.5",
    "lz4>=4.4.4",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruff>=0.12.0",
    "sh>=2.2.2",
    "typer>=0.16.0",
]

[tool.ruff]
extend-exclude = ["tests", "typings"]

[tool.basedpyright]
include = ["kernel_builder"]
exclude = ["tests"]

pythonVersion = "3.12"
pythonPlatform  = "Linux"
typeCheckingMode = "recommended"
stubPath = "typings"

reportUnusedCallResult = "none"
reportExplicitAny      = "none"
reportAny              = "none"
